@@ -2,6 +2,7 @@
   <div class="inside">
     <div class="primary">
       <h1>{{ article.title }}</h1>
+      {{ article.excerpt }}
       {{ article.body }}
     </div>
     <hr class="hide" />
